Fix small issue

--- a/packages/StewardClient/src/app/pages/tools/pages/user-group-management/components/list-users-in-user-group/list-users-in-user-group.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-group-management/components/list-users-in-user-group/list-users-in-user-group.component.html
@@ -10,7 +10,7 @@
           #verifyDeleteBtn
           [disabled]="disallowDeleteAllUsers"
           [permissionAttribute]="removeAllPermAttribute"
-          [permissionTitle]="service.gameTitle"
+          [permissionTitle]="service?.gameTitle"
         ></verify-button>
         <button
           class="delete-all-button"
