Fix two more small issues

--- a/packages/StewardClient/src/app/pages/tools/pages/user-group-management/components/list-users-in-user-group/list-users-in-user-group.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-group-management/components/list-users-in-user-group/list-users-in-user-group.component.html
@@ -56,7 +56,7 @@
             #verifyBulkAddBtn
             [disabled]="!formControls.userIdentifications.value || !userHasWritePerms"
             [permissionAttribute]="updatePermAttribute"
-            [permissionTitle]="service.gameTitle"
+            [permissionTitle]="service?.gameTitle"
           ></verify-button>
           <button
             [disabled]="!formControls.userIdentifications.value || !userHasWritePerms"
@@ -81,7 +81,7 @@
             #verifyBulkDeleteBtn
             [disabled]="!formControls.userIdentifications.value || !userHasWritePerms"
             [permissionAttribute]="updatePermAttribute"
-            [permissionTitle]="service.gameTitle"
+            [permissionTitle]="service?.gameTitle"
           ></verify-button>
           <button
             [disabled]="!formControls.userIdentifications.value || !userHasWritePerms"
