--- a/packages/StewardClient/src/app/pages/tools/pages/lsp-tasks/components/lsp-task-management.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/lsp-tasks/components/lsp-task-management.component.html
@@ -1,11 +1,11 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Task Management</mat-card-title>
+    <mat-card-title>LSP Task Management</mat-card-title>
     <mat-card-subtitle>{{ gameTitle | humanize }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <form *waitForMonitor="getMonitor">
-      <table mat-table [dataSource]="tasks">
+      <table mat-table [dataSource]="lspTasks">
         <ng-container matColumnDef="task-info">
           <th mat-header-cell *matHeaderCellDef>Task Info</th>
           <td mat-cell *matCellDef="let entry">
@@ -13,37 +13,37 @@
               <tr>
                 <th>Name</th>
                 <td>
-                  {{ entry.task.executorType }}
+                  {{ entry.lspTask.executorType }}
                 </td>
               </tr>
               <tr>
                 <th>Id</th>
                 <td>
-                  {{ entry.task.id }}
+                  {{ entry.lspTask.id }}
                 </td>
               </tr>
               <tr>
                 <th>State</th>
                 <td>
-                  {{ entry.task.state }}
+                  {{ entry.lspTask.state }}
                 </td>
               </tr>
               <tr>
                 <th>Custom Properties</th>
                 <td>
-                  {{ entry.task.customProperties }}
+                  {{ entry.lspTask.customProperties }}
                 </td>
               </tr>
               <tr>
                 <th>Lock</th>
                 <td>
-                  {{ entry.task.lock }}
+                  {{ entry.lspTask.lock }}
                 </td>
               </tr>
               <tr>
                 <th>Lock Taken Until</th>
                 <td>
-                  {{ entry.task.lockTakenUntilUtc | utcDate: 'short' }}
+                  {{ entry.lspTask.lockTakenUntilUtc | utcDate: 'short' }}
                 </td>
               </tr>
             </table>
@@ -57,18 +57,18 @@
               <tr>
                 <th>Last Event</th>
                 <td>
-                  {{ entry.task.lastEventUtc | utcDate: 'short' }}
+                  {{ entry.lspTask.lastEventUtc | utcDate: 'short' }}
                 </td>
               </tr>
               <tr>
                 <th>Last Exception</th>
                 <td>
-                  {{ entry.task.lastException }}
+                  {{ entry.lspTask.lastException }}
                 </td>
               </tr>
               <tr>
                 <th>Last Run Duration</th>
-                <td>{{ entry.task.lastRunDuration }} seconds</td>
+                <td>{{ entry.lspTask.lastRunDuration }} seconds</td>
               </tr>
               <tr *ngIf="!entry.edit">
                 <th>Next Execution</th>
@@ -103,13 +103,13 @@
                   matInput
                   min="1"
                   max="999999999"
-                  [value]="entry.task.periodInSeconds"
+                  [value]="entry.lspTask.periodInSeconds"
                 />
               </mat-form-field>
               <mat-form-field appearance="fill">
                 <mat-label>Period Type</mat-label>
                 <mat-select [formControl]="entry.formControls.periodType">
-                  <mat-option *ngFor="let type of taskPeriodTypes" [value]="type">
+                  <mat-option *ngFor="let type of lspTaskPeriodTypes" [value]="type">
                     {{ type | deppoh }}
                   </mat-option>
                 </mat-select>
@@ -125,7 +125,7 @@
               <button
                 mat-raised-button
                 color="primary"
-                matTooltip="Change the state of the task"
+                matTooltip="Change the state of the LSP task"
                 (click)="changeState(entry)"
                 clickStop
                 stateManager
@@ -137,12 +137,12 @@
                 [permissionAttribute]="permAttribute"
                 [permissionTitle]="gameTitle"
               >
-                {{ entry.task.state === taskStateEnum.Disabled ? 'Enable' : 'Disable' }}
+                {{ entry.lspTask.state === lspTaskStateEnum.Disabled ? 'Enable' : 'Disable' }}
               </button>
               <button
                 mat-raised-button
                 color="primary"
-                matTooltip="Run the task now"
+                matTooltip="Run the LSP task now"
                 (click)="runNow(entry)"
                 clickStop
                 stateManager
@@ -165,16 +165,16 @@
                 [permissionAttribute]="permAttribute"
                 [permissionTitle]="gameTitle"
               >
-                <span matTooltip="Edit Task">Edit</span>
+                <span matTooltip="Edit LSP Task">Edit</span>
               </button>
             </span>
             <span class="edit" *ngIf="entry.edit">
               <button
                 mat-raised-button
                 color="primary"
-                (click)="updateNotificationEntry(entry)"
+                (click)="updateLspTaskEntry(entry)"
                 [disabled]="!entry.formGroup.valid"
-                matTooltip="Update task"
+                matTooltip="Update LSP task"
                 clickStop
                 stateManager
                 [monitor]="entry.postMonitor"
@@ -191,7 +191,7 @@
                 mat-stroked-button
                 color="primary"
                 (click)="revertEntryEdit(entry)"
-                matTooltip="Cancel task edit"
+                matTooltip="Cancel LSP task edit"
               >
                 Undo
               </button>
