Fix UGC edit typo

--- a/packages/StewardClient/src/app/shared/views/edit-ugc-modal/edit-ugc-modal.component.html
+++ b/packages/StewardClient/src/app/shared/views/edit-ugc-modal/edit-ugc-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Edit {{ gameTitle | humanize }} Ugc Content</h2>
+<h2 mat-dialog-title>Edit {{ gameTitle | humanize }} UGC Content</h2>
 
 <mat-dialog-content>
   <form [formGroup]="formGroup">
@@ -42,7 +42,7 @@
     color="primary"
     (click)="editUgc()"
   >
-    Edit Ugc
+    Edit UGC
     <button-spinner [monitor]="postMonitor" defaultIcon="save"></button-spinner>
   </button>
 </mat-dialog-actions>
