--- a/packages/StewardClient/src/app/sidebars/contact-us/contact-us.component.html
+++ b/packages/StewardClient/src/app/sidebars/contact-us/contact-us.component.html
@@ -1,10 +1,13 @@
 <section *ngIf="!isSubmitted; else submitted">
   <h2>Contact Us</h2>
+  <h4>Please choose an option below:</h4>
   <div class="sf-wrapper">
     <div class="sf-horizontal">
       <mat-button-toggle-group [(ngModel)]="selectedRequestType">
         <mat-button-toggle [value]="RequestType.Feature">Feature</mat-button-toggle>
         <mat-button-toggle [value]="RequestType.Bug">Bug</mat-button-toggle>
+        <mat-button-toggle [value]="RequestType.Permission">Permission</mat-button-toggle>
+        <mat-button-toggle [value]="RequestType.Question">Question</mat-button-toggle>
       </mat-button-toggle-group>
     </div>
 
@@ -195,6 +198,74 @@
           monitorDisable
         >
           Submit Bug
+          <button-spinner [monitor]="submitReportMonitor" defaultIcon="send"></button-spinner>
+        </button>
+      </div>
+    </form>
+
+    <form [formGroup]="formGroupPermission" *ngIf="selectedRequestType === RequestType.Permission">
+      <div class="sf-horizontal">
+        <mat-label
+          >If you'd like to request specific Steward permissions, please fill out the form below.
+          Please be sure to use commas to separate each permission you are requesting:
+        </mat-label>
+      </div>
+      <div class="sf-horizontal">
+        <mat-form-field appearance="fill" class="sf-default-hint">
+          <mat-label>Permission(s) Needed</mat-label>
+          <input matInput [formControl]="formControlsPermission.permission" />
+        </mat-form-field>
+      </div>
+      <div class="sf-horizontal">
+        <mat-form-field appearance="fill" class="sf-default-hint">
+          <mat-label>Business Justification</mat-label>
+          <textarea
+            matInput
+            [formControl]="formControlsPermission.justification"
+            dkTextareaAutosize
+          ></textarea>
+        </mat-form-field>
+      </div>
+      <div class="sf-horizontal">
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="submitPermission()"
+          [disabled]="!formGroupPermission.valid"
+          stateManager
+          [monitor]="submitReportMonitor"
+          monitorDisable
+        >
+          Submit Request
+          <button-spinner [monitor]="submitReportMonitor" defaultIcon="send"></button-spinner>
+        </button>
+      </div>
+    </form>
+
+    <form [formGroup]="formGroupQuestion" *ngIf="selectedRequestType === RequestType.Question">
+      <div class="sf-horizontal">
+        <mat-label
+          >If you'd like to ask the Steward team a general question, please enter it below and
+          submit:
+        </mat-label>
+      </div>
+      <div class="sf-horizontal">
+        <mat-form-field appearance="fill" class="sf-default-hint">
+          <mat-label>Question</mat-label>
+          <input matInput [formControl]="formControlsQuestion.question" />
+        </mat-form-field>
+      </div>
+      <div class="sf-horizontal">
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="submitQuestion()"
+          [disabled]="!formGroupQuestion.valid"
+          stateManager
+          [monitor]="submitReportMonitor"
+          monitorDisable
+        >
+          Submit Question
           <button-spinner [monitor]="submitReportMonitor" defaultIcon="send"></button-spinner>
         </button>
       </div>
