--- a/packages/StewardClient/src/app/sidebars/contact-us/contact-us.component.html
+++ b/packages/StewardClient/src/app/sidebars/contact-us/contact-us.component.html
@@ -203,7 +203,32 @@
       </div>
     </form>
 
-    <form [formGroup]="formGroupPermission" *ngIf="selectedRequestType === RequestType.Permission">
+  <ng-container *waitForMonitor="getTeamLeadMonitor">
+    <ng-container *ngIf="!!teamLead">
+      <tr>
+        <th>Team Name</th>
+        <td>
+          <standard-copy>{{ !!teamLead ? teamLead?.team?.name : 'N/A' }}</standard-copy>
+        </td>
+      </tr>
+      <tr>
+        <th>Team Lead</th>
+        <td>
+          <standard-copy>{{ !!teamLead ? teamLead.name : adminTeamLead }}</standard-copy>
+        </td>
+      </tr>
+      <tr>
+        <th>Team Lead Email</th>
+        <td>
+          <standard-copy>{{
+            !!teamLead ? teamLead.emailAddress : adminTeamLeadEmail
+          }}</standard-copy>
+        </td>
+      </tr>
+    </ng-container>
+  </ng-container>
+
+    <form [formGroup]="formGroupPermission" *ngIf="selectedRequestType === RequestType.Permission && !teamLead">
       <div class="sf-horizontal">
         <mat-label
           >If you'd like to request specific Steward permissions, please fill out the form below.
@@ -214,6 +239,18 @@
         <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Permission(s) Needed</mat-label>
           <input matInput [formControl]="formControlsPermission.permission" />
+        </mat-form-field>
+      </div>
+      <div class="sf-horizontal">
+        <mat-form-field appearance="fill" class="sf-default-hint">
+          <mat-label>Title(s) Needed</mat-label>
+          <input matInput [formControl]="formControlsPermission.titles" />
+        </mat-form-field>
+      </div>
+      <div class="sf-horizontal">
+        <mat-form-field appearance="fill" class="sf-default-hint">
+          <mat-label>Environment(s) Needed</mat-label>
+          <input matInput [formControl]="formControlsPermission.environments" />
         </mat-form-field>
       </div>
       <div class="sf-horizontal">
@@ -252,7 +289,11 @@
       <div class="sf-horizontal">
         <mat-form-field appearance="fill" class="sf-default-hint">
           <mat-label>Question</mat-label>
-          <input matInput [formControl]="formControlsQuestion.question" />
+          <textarea
+          matInput
+          [formControl]="formControlsQuestion.question"
+          dkTextareaAutosize
+        ></textarea>
         </mat-form-field>
       </div>
       <div class="sf-horizontal">
@@ -278,11 +319,11 @@
     <div class="sf-vertical">
       <div class="sf-horizontal">
         <mat-icon class="large-icon">check_circle</mat-icon>
-        <h1>Successfully submitted your feature/bug</h1>
+        <h1>Submission successful!</h1>
       </div>
       <div class="sf-horizontal">
         <button mat-raised-button color="accent" (click)="resetForm()" class="sf-default-margins">
-          Submit Another Feature/Bug
+          Submit Another Request
         </button>
         <a mat-raised-button color="primary" target="_blank" [href]="teamsHelpChannel"
           >View Request In Teams</a
