--- a/packages/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-banning/pages/woodstock/woodstock-banning.component.html
@@ -108,8 +108,8 @@
                       "
                       class="warn"
                     >
-                      Player UGC can be flagged for review in UGC Details. This adds the UGC to the
-                      Salus queue for review.
+                      Player UGC can be flagged for review in UGC Details which will add the UGC to
+                      the Salus queue for review.
                     </p>
                   </div>
                   <div>
